--- a/templates/maps/rgp.html
+++ b/templates/maps/rgp.html
@@ -17,7 +17,7 @@
 <div class="container-md py-2">
     <div class="d-lg-flex justify-content-between">
         <div>
-            <button class="btn btn-light d-lg-none text-nowrap w-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Сети РЖД</button>
+            <button class="btn btn-light d-lg-none text-nowrap w-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Варианты трамвайных линий</button>
 
             <div class="offcanvas-lg offcanvas-bottom" data-bs-backdrop="false" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
               <div class="offcanvas-header">
