--- a/templates/maps/rgp.html
+++ b/templates/maps/rgp.html
@@ -88,17 +88,17 @@ function init() {
             controls: ['zoomControl', 'rulerControl', 'typeSelector', 'geolocationControl' ]
         });
 
-const var1 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd1'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/var1.kml')
-const var2 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd2'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/var2.kml')
-const var3 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd3'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/var3.kml')
-const var4 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd4'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/var4.kml')
-const var5 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd5'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/var5.kml')
-const var6 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd6'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/etap1.kml')
-const out1 = new GeoObjectDrawer(myMap, document.querySelector('.load-out1'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/gaz.kml')
-const out2 = new GeoObjectDrawer(myMap, document.querySelector('.load-out2'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/water.kml')
-const out6 = new GeoObjectDrawer(myMap, document.querySelector('.load-out3'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/sewerage.kml')
-const out4 = new GeoObjectDrawer(myMap, document.querySelector('.load-out4'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/warm.kml')
-const board = new GeoObjectDrawer(myMap, document.querySelector('.load-board'), 'https://vvschrus.pythonanywhere.com/static/data/rgp/outline.kml')
+const var1 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd1'), '/static/data/rgp/var1.kml')
+const var2 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd2'), '/static/data/rgp/var2.kml')
+const var3 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd3'), '/static/data/rgp/var3.kml')
+const var4 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd4'), '/static/data/rgp/var4.kml')
+const var5 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd5'), '/static/data/rgp/var5.kml')
+const var6 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd6'), '/static/data/rgp/etap1.kml')
+const out1 = new GeoObjectDrawer(myMap, document.querySelector('.load-out1'), '/static/data/rgp/gaz.kml')
+const out2 = new GeoObjectDrawer(myMap, document.querySelector('.load-out2'), '/static/data/rgp/water.kml')
+const out6 = new GeoObjectDrawer(myMap, document.querySelector('.load-out3'), '/static/data/rgp/sewerage.kml')
+const out4 = new GeoObjectDrawer(myMap, document.querySelector('.load-out4'), '/static/data/rgp/warm.kml')
+const board = new GeoObjectDrawer(myMap, document.querySelector('.load-board'), '/static/data/rgp/outline.kml')
 
 }
 </script>
