--- a/templates/maps/rzd.html
+++ b/templates/maps/rzd.html
@@ -90,18 +90,18 @@ function init() {
             controls: ['zoomControl', 'rulerControl', 'typeSelector', 'geolocationControl' ]
         });
 
-const rzd1 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd1'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/rzd1.kml')
-const rzd3 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd3'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/rzd3.kml')
-const rzd4 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd4'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/rzd4.kml')
-const rzd5 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd5'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/rzd5.kml')
-const rzd6 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd6'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/rzd6.kml')
-const out1 = new GeoObjectDrawer(myMap, document.querySelector('.load-out1'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/out1.kml')
-const out2 = new GeoObjectDrawer(myMap, document.querySelector('.load-out2'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/out2.kml')
-const out4 = new GeoObjectDrawer(myMap, document.querySelector('.load-out4'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/out4.kml')
-const out6 = new GeoObjectDrawer(myMap, document.querySelector('.load-out6'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/test_picture.kml')
-const piketag = new GeoObjectDrawer(myMap, document.querySelector('.load-piketag'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/piketag.kml')
-const board = new GeoObjectDrawer(myMap, document.querySelector('.load-board'), 'https://vvschrus.pythonanywhere.com/static/data/rzd/board.kml')
-const kadastr = new GeoObjectDrawer(myMap, document.querySelector('.load-kadastr'), 'https://vvschrus.pythonanywhere.com/static/rzd/data/kadastr.kml')
+const rzd1 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd1'), '/static/data/rzd/rzd1.kml')
+const rzd3 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd3'), '/static/data/rzd/rzd3.kml')
+const rzd4 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd4'), '/static/data/rzd/rzd4.kml')
+const rzd5 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd5'), '/static/data/rzd/rzd5.kml')
+const rzd6 = new GeoObjectDrawer(myMap, document.querySelector('.load-rzd6'), '/static/data/rzd/rzd6.kml')
+const out1 = new GeoObjectDrawer(myMap, document.querySelector('.load-out1'), '/static/data/rzd/out1.kml')
+const out2 = new GeoObjectDrawer(myMap, document.querySelector('.load-out2'), '/static/data/rzd/out2.kml')
+const out4 = new GeoObjectDrawer(myMap, document.querySelector('.load-out4'), '/static/data/rzd/out4.kml')
+const out6 = new GeoObjectDrawer(myMap, document.querySelector('.load-out6'), '/static/data/rzd/test_picture.kml')
+const piketag = new GeoObjectDrawer(myMap, document.querySelector('.load-piketag'), '/static/data/rzd/piketag.kml')
+const board = new GeoObjectDrawer(myMap, document.querySelector('.load-board'), '/static/data/rzd/board.kml')
+const kadastr = new GeoObjectDrawer(myMap, document.querySelector('.load-kadastr'), '/static/rzd/data/kadastr.kml')
 
 }
 </script>
